css/style.css
@import url('reset.css');


/* Animations */

@keyframes bounce {
	0% {background-position: center}
	33% {background-position: right center}
	66% {background-position: left center}
	99% {background-position: center}
}

@-webkit-keyframes bounce {
	0% {background-position: center}
	33% {background-position: right center}
	66% {background-position: left center}
	99% {background-position: center}
}
/* General styles */

html {
	font-family: 'Oswald', sans-serif;
}

body {
	background-image: url(../img/vertical_cloth.png);
	font-size: 16px;
}


h1 {
	font-size: 8em;
	font-weight: bold;
	display: inline;
	line-height: 225px;
}

h3 {
	font-size: 3em;
}

h4 {
	font-size: 2.5em;
}

a {
	text-decoration: none;
	color: black;
}

.column a:hover {
	color: white;
}

.active {
	color: #0776A0;
	padding: 0 60px;
}
footer {
	position: fixed;
	background: black;
	bottom: 0;
	left: 0;
	width: 100%;
	opacity: .7;
	text-align: center;
	font-size: .8em;
}

footer:hover {
	opacity: 1;
}

address {
	font-size: 1.5em;
	padding-left: 10px;
	padding-top: 10px;
	padding-bottom: 10px;
	color: black;
	text-align: left;
	line-height: 130%;
}

nav {
	width: 100%;
	position: relative;
	text-align: center;
}

nav ul {
	padding: 0;
	margin: 0 auto;
	background:black;
}

ul li {
	list-style: none;
	font-size: 2em;
	display: inline-block;
	margin: 0 auto;
	padding: 0 50px;
}

iframe {
	width: 100%;
}
ul a {
	display: inline-block;
	color: white;
	padding: 10px;
}

#contact-info li,
#contact-info a {
	color: black;
	padding: 0px;
	display: block;
}

#contact-info {
	width: 100%;
	text-align: center;
	padding: 0;
}

footer p {
	color: white;
	padding-top: 10px;
	padding-bottom: 5px;
	padding-left: 5px;
}

/* Main div styling */

#header-pic {
		background-image: url(../img/logo.png);
		background-repeat: no-repeat;
		background-size: contain;
		height: 180px;
		width: 100%;
		background-position: center;
}

#header-pic:hover {
	animation: bounce 2s 1;
	-webkit-animation: bounce 2s 1;
}
.main-content {
	width: 60%;
	max-width: 1280px; 
	margin: 15px auto;
	-webkit-box-shadow: 0px 0px 20px rgba(235, 235, 235, 0.75);
	-moz-box-shadow:    0px 0px 20px rgba(235, 235, 235, 0.75);
	box-shadow:         0px 0px 20px rgba(235, 235, 235, 0.75);
	max-width: 1006px;
	background: white;
}

/* Positioning images */

#logo {
	vertical-align: middle;
}

.pull-left {
	float: left;
}

.bottom-pic {
	width: 100%;
	height: 345px;
	background-repeat: no-repeat; 
	background-size: cover;
}

/* specifically index.shtml only */

.home-main {
	width:100%;
}

.column {
	width: 33.333333333333333%;
	float: left;
	height: 135px;
	border-bottom: 1px solid white;
	box-sizing: border-box;
}

.column h3 {
	color: white;
	text-align: center;
	padding-top: 3px;
}

.centered-h3 {
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 2em;

}


.column h4 {
	padding-top: 10px;
	font-size: 1.5em;
	color: black;
	text-align: center;

}

.column address {
	text-align: center;
}
/* specifically menu.shtml only */

.pizzas {
	width: 50%;
	box-sizing: border-box;
	float: left;
	height: 715px;
}
.food span {
	display: block;
	font-size: 1.1em;
}

.food {
	padding-bottom: 10px;
	padding-left: 10px;
	padding-right: 10px;
	color: white;
}

.food h4 {
	padding-bottom: 10px;
}

dl,
.food h5 {
	font-size: 1.1em;
	padding-left: 10px;
	line-height: 140%;
}

dt,
.pricing {
	color: black;
}

dd,
.food h5 {
	padding-left: 10px;
}

.pricing {
	padding-bottom: 20px;
	padding-left: 10px;
}

/* specifically about.shtml only */

.story-impact {
	padding-left: 10px;
	padding-right: 10px;
	text-align: justify;
}

.story-impact h4 {
	padding-bottom: 10px;
}

.story-impact h5 {
	font-size: 1.2em;
	padding-left: 15px;
	padding-right: 15px;
	line-height: 130%;
}

.story-impact h5:last-child {
	padding-bottom: 10px;
}

/* Specialized font sizes */

#small-pizza {
	font-size: 1em;
}

#med-pizza {
	font-size: 1.3em;
}

#big-pizza {
	font-size: 1.6em;
}

.bigwords {
	font-size: 1.4em;

}

/* Colorful blocks and pieces of text */

#meatpies,
#left {
	background: #FF2C00;
}

#vegpies {
	background: #34D800;
}

#green {
	color: #34D800;
}
#drinks,
#middle {
	background: #0776A0;
}

#dessert {
	background: #FF8500;
}

.purple {
	color: #39275B;
}

#right {
	background: #84E900;
}

#pizza {
	color: #FF0000;
}

nav a:hover,
#contact-info a:last-child:hover,
#best {
 	color: #D8AA03;
 }

/* Media queries */

@media screen and (max-width:768px) {
	.main-content {
		width: 98%;
	}

	body {
		font-size: 18px;
	}

	.column {
		width: 100%;
	}

	nav ul li,
	nav ul li a,
	.active {
		display: block;
		padding: 2px;
	}

	.pizzas {
		width: 100%;
		height: 675px;
		clear: both;
	}

	.food h4 {
		font-size: 1.7em;
	}
}


@media screen and (min-width: 769px) {
	.main-content {
		width: 95%;
	}

	address {
		font-size: 1.4em;
	}
}

@media screen and (min-width: 1000px) {
	.main-content {
		width: 90%;
	}

	.pizzas {
		height: 650px;
	}
}

@media screen and (min-width: 1280px) {
	#header-pic {
		height: 200px;
	}	
}

